--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Download CoronaNepal App</title>
     <meta property="og:url" content="index.html" />
     <meta property="og:type" content="article" />
-    <meta property="og:title"  content="Download CoronaNepal App" />
-    <meta http-equiv="refresh" content="3; url=puskal/coronanepal.apk">
+    <meta property="og:title"  content="Download CoronaNepal App v2.0" />
+    <meta http-equiv="refresh" content="3; url=puskal/coronaNepalv2.0.apk">
 	<style>
 body {
  background-color: black;
